--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       rel="stylesheet"
     />
 
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
+
     <title>Junaid-Jewel</title>
   </head>
 
